--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -71,6 +71,9 @@ h6 {
   font-family: var(--heading-font);
 }
 
+.no-mouse {
+  cursor: default;
+}
 /*--------------------------------------------------------------
 # Global Header
 --------------------------------------------------------------*/
@@ -491,7 +494,7 @@ h6 {
 }
 
 .footer .footer-links-grid ul li a:hover::before {
-  opacity: 1;
+  opacity: 0;
 }
 
 .footer .footer-cta h5 {
